--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>The Lord's Church</title>
-    <script src="https://code.jquery.com/jquery.min.js"></script>
     <link href="tlc_style.css" rel="stylesheet"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
 </head>
 <body id="theBody">
 <div class="container-fluid banner">
@@ -27,37 +24,42 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand white-text" href="#">
+            <p class="navbar-brand white-text" href="#">
                 <b><i>Saturday, 20th of August 2016</i></b>
-            </a>
+            </p>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href=index.php class="white-text">HOME<span class="sr-only">(current)</span></a></li>
+                <li><a class="white-text">HOME<span class="sr-only">(current)</span></a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT US <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href='history.php'>Our History</a></li>
-                        <li><a href='vision.php'>Our Vision</a></li>
-                        <li><a href='beliefs.php'>Our Beliefs</a></li>
-                        <li><a href='salvation.php'>Salvation</a></li>
-                        <li><a href='whowesupport.php'>Who We Support</a></li>
+                        <li><a>Our History</a></li>
+                        <li><a>Our Vision</a></li>
+                        <li><a>Our Beliefs</a></li>
+                        <li><a>Salvation</a></li>
+                        <li><a>Who We Support</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" role="button" aria-expanded="false">MINISTRIES <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href='ministry.php?MinistryID=2'>Children's Ministry</a></li><li><a href='ministry.php?MinistryID=5'>Men's Ministry</a></li><li><a href='ministry.php?MinistryID=4'>Music Ministry</a></li><li><a href='ministry.php?MinistryID=1'>Souled Out Youth</a></li><li><a href='ministry.php?MinistryID=3'>Women's Ministry</a></li>      </ul>
+                        <li><a>Children's Ministry</a></li>
+                        <li><a>Men's Ministry</a></li>
+                        <li><a>Music Ministry</a></li>
+                        <li><a>Souled Out Youth</a></li>
+                        <li><a>Women's Ministry</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#" class="white-text" role="button">STAFF</a>
                 </li>
-                <li><a href="messages.php" class="white-text">MESSAGES</a></li>
-                <li><a href="directions.php" class="white-text">DIRECTIONS</a></li>
+                <li><a class="white-text">MESSAGES</a></li>
+                <li><a class="white-text">DIRECTIONS</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right white-text">
-                <li><a href="admin.php" class="white-text">Login</a></li>
+                <li><a class="white-text">Login</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -161,5 +163,7 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
